--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2593,10 +2593,10 @@ input, select, textarea {
 		justify-content: space-between;
 		background-color: #1f1815;
 		background-attachment: scroll,								scroll;
-		background-image: url("images/overlay.png"), url("../../images/bg.jpg");
+		background-image: url("images/overlay.png"), url("../../images/Key.jpg");
 		background-position: top left,							top left;
 		background-repeat: repeat,								no-repeat;
-		background-size: auto,								150%;
+		background-size: auto,								200%;
 		color: rgba(255, 255, 255, 0.5);
 		height: 100%;
 		left: 0;
@@ -3075,20 +3075,20 @@ input, select, textarea {
 
 		/* Footer */
 
-			#footer {
-				background-attachment: scroll;
-				background-color: #1f1815;
-				background-image: url("images/overlay.png"), url("../../images/bg.jpg");
-				background-position: top left,						bottom center;
-				background-repeat: repeat,							no-repeat;
-				background-size: auto,							cover;
-				bottom: auto;
-				left: auto;
-				padding: 4em 4em 6em 4em;
-				position: relative;
-				text-align: center;
-				width: 100%;
-			}
+		#footer {
+			background-attachment: scroll;
+			background-color: #1f1815;
+			background-image: url("images/overlay.png"), url("../../images/Key.jpg");
+			background-position: top left, bottom center;
+			background-repeat: repeat, no-repeat;
+			background-size: auto, cover;
+			bottom: auto;
+			left: auto;
+			padding: 4em 4em 6em 4em;
+			position: relative;
+			text-align: center;
+			width: 100%;
+		}
 
 				#footer .icons {
 					margin: 0 0 1em 0;
